Whoops; Use GoogleAiGeminiStreamingChatModelBuilder#maxRetries instead of adding to base builder.